mongoexp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
spec:
  selector:
    app: mongo-express # must match the label on the POD, not the Deployment itself.
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081 # the port that will be exposed by the service
      targetPort: 8081 # the port on the POD that the service will forward to or simply containerPort
      nodePort: 30001 # port where external ip address will be open
